--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  mc: ^0.0.1+2
+  mc:
+    path: /media/chahboun/Nouveau nom/mc
 
 dev_dependencies:
   flutter_test:
