--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mc
-description: State managment and request package, Model,View,Request [MVR].
+description: State management & request package, Model,View,Request [MVR].
 version: 0.0.1+2
 homepage: https://github.com/ourflutter/mc
 
