--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mc
 description: State management & request package, Model,View,Controller,Request [MVCR].
-version: 0.0.1+9
+version: 0.0.2
 homepage: https://github.com/ourflutter/mc
 
 environment:
