--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   mc:
-    path: /media/chahboun/Nouveau nom/mc
+    path: /media/chahboun/New Volume/Development/mc
+    
 
 dev_dependencies:
   flutter_test:
