--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  mc: ^0.0.2+1
+  mc:
+    path: /home/chahboun/mc
 
     
 
