--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  mc:
-    path: /Users/mac/Developer/mc
+  mvc_rocket:
+    path: /Users/mac/Developer/MVCRocket
 
     
 
