--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: mc
-description: State management & request package, Model,View,Controller,Request  MVCRocket .
-version: 0.0.1
-homepage: https://github.com/JahezAcademy/mc
+name: mvc_rocket
+description: State management & request package, Model,View,Controller,Request MVCR.
+version: 0.0.2+2
+homepage: https://github.com/JahezAcademy/MVCRocket
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
