--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  mvc_rocket:
-    path: /Users/mac/Developer/mvc_rocket
+  mvc_rocket: 
+    git: 
+      url: https://github.com/JahezAcademy/mvc_rocket
+      ref: staging
 
     
 
