--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -35,8 +35,13 @@ jobs:
 
     - run: cd example
 
-    # Run widget tests for our flutter project.
-    - run: flutter test test/view_tests.dart  
+    - run: echo "Test view example"
+
+    - run: flutter test test/view_tests.dart 
+
+    - run: echo "Test model example"
+
+    - run: flutter test test/model_tests.dart  
     
     # Build apk.
     - run: flutter build apk
