--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -33,18 +33,18 @@ jobs:
     # Statically analyze the Dart code for any errors.
     - run: flutter analyze .
 
-    - run: cd example
-
-    - run: echo "Test view example"
-
-    - run: flutter test test/view_tests.dart 
-
-    - run: echo "Test model example"
-
-    - run: flutter test test/model_tests.dart  
-    
-    # Build apk.
-    - run: flutter build apk
+    - name: Get flutter dependencies
+      run: flutter pub get
+      working-directory: ./example
+    - name: Format code
+      run: flutter format --set-exit-if-changed .
+      working-directory: ./example
+    - name: Test model & view example
+      run: flutter test
+      working-directory: ./example 
+    - name: Build apk
+      run: flutter build apk
+      working-directory: ./example 
     
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v1
