--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -7,6 +7,8 @@ on:
     branches:
     - main
     
+  workflow_dispatch:
+    
 # on: push    # Default will running for every branch.
     
 jobs:
