change ci event to push on main for test

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -3,7 +3,7 @@ name: Flutter CI
 # This workflow is triggered on pushes to the repository.
 
 on:
-  pull_request:
+  push:
     branches:
     - main
     
