--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -24,14 +24,18 @@ jobs:
     # Setup the flutter environment.
     - uses: subosito/flutter-action@v1
     
-    # Get flutter dependencies.
-    - run: flutter pub get
+    - name: Upgrade flutter dependencies.
+      run: flutter packages upgrade
+      working-directory: ./example
+     
+    - name: Get flutter dependencies.
+      run: flutter pub get
     
-    # Check for any formatting issues in the code.
-    - run: flutter format --set-exit-if-changed .
+    - name: Check for any formatting issues in the code.
+      run: flutter format --set-exit-if-changed .
     
-    # Statically analyze the Dart code for any errors.
-    - run: flutter analyze .
+    - name: Statically analyze the Dart code for any errors.
+      run: flutter analyze .
 
     - name: Test model & view example
       run: flutter test
