--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -3,9 +3,9 @@ name: Flutter CI
 # This workflow is triggered on pushes to the repository.
 
 on:
-  push:
+  pull_request:
     branches:
-    - main
+    - dev
     
   workflow_dispatch:
     
