--- a/packages/rocket_client/pubspec.yaml
+++ b/packages/rocket_client/pubspec.yaml
@@ -1,8 +1,9 @@
 name: rocket_client
-description: A new Flutter package project.
+description: Simple http package for RocketModel or get json data.
 version: 0.0.1
-repository: https://github.com/flutter-rocket/flutter_rocket/rocket_client
-issue_tracker: https://github.com/flutter-rocket/flutter_rocket/labels/rocket_client
+repository: https://github.com/JahezAcademy/flutter_rocket/rocket_client
+issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_client
+homepage: https://github.com/JahezAcademy/flutter_rocket
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
