--- a/packages/rocket_model/pubspec.yaml
+++ b/packages/rocket_model/pubspec.yaml
@@ -1,8 +1,9 @@
 name: rocket_model
-description: A new Flutter package project.
+description: Package for ready model to rebuild RocketView widget
 version: 0.0.1
-repository: https://github.com/flutter-rocket/flutter_rocket/rocket_model
-issue_tracker: https://github.com/flutter-rocket/flutter_rocket/labels/rocket_model
+repository: https://github.com/JahezAcademy/flutter_rocket/rocket_model
+issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_model
+homepage: https://github.com/JahezAcademy/flutter_rocket
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
