--- a/packages/rocket_model/pubspec.yaml
+++ b/packages/rocket_model/pubspec.yaml
@@ -12,8 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rocket_listenable:
-    path: ../rocket_listenable
+  rocket_listenable: ^0.0.1
 
 dev_dependencies:
   flutter_test:
