--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -17,14 +17,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    # Setup Java environment in order to build the Android app.
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
+    - uses: actions/checkout@v3
     
     # Setup the flutter environment.
-    - uses: subosito/flutter-action@v1
+    - uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.7.7'
+        channel: 'stable'
     
     - name: Get flutter dependencies.
       run: flutter pub get
