--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -20,18 +20,13 @@ jobs:
     - uses: actions/checkout@v3
     
     # Setup the flutter environment.
-    - uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.10.3'
-        channel: 'stable'
-    
-    - name: Get flutter dependencies.
-      run: flutter pub get
-      working-directory: ./packages/flutter_rocket/example
+    - uses: subosito/flutter-action@v2.10.0
 
-    - name: Upgrade flutter dependencies.
-      run: flutter packages upgrade
-      working-directory: ./packages/flutter_rocket/example
+    - name: Install Dependencies
+      run: flutter packages get
+
+    - name: Format
+      run: dart format --set-exit-if-changed .
     
     - name: Check for any formatting issues in the code.
       run: dart format --set-exit-if-changed .
