--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -17,28 +17,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    # Setup Java environment in order to build the Android app.
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
+    - uses: actions/checkout@v3
     
     # Setup the flutter environment.
-    - uses: subosito/flutter-action@v1
+    - uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.10.3'
+        channel: 'stable'
     
     - name: Get flutter dependencies.
       run: flutter pub get
-      
+      working-directory: ./packages/flutter_rocket
+
     - name: Upgrade flutter dependencies.
       run: flutter packages upgrade
-      working-directory: ./example
+      working-directory: ./packages/flutter_rocket
     
     - name: Check for any formatting issues in the code.
       run: dart format --set-exit-if-changed .
+      working-directory: ./packages/flutter_rocket
     
     - name: Statically analyze the Dart code for any errors.
       run: dart analyze .
+      working-directory: ./packages/flutter_rocket
 
-    - name: Test model & view example
+    - name: Test model & view examples
       run: flutter test
-      working-directory: ./example
+      working-directory: ./packages/flutter_rocket/example
