--- a/packages/rocket_client/example/pubspec.yaml
+++ b/packages/rocket_client/example/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  rocket_model:
-    path: ../../rocket_model
+  rocket_model: ^0.0.2
   rocket_client:
     path: ../
 
