--- a/packages/flutter_rocket/example/pubspec.yaml
+++ b/packages/flutter_rocket/example/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  flutter_rocket: ^0.0.2
+  flutter_rocket:
+    path: ../
   go_router: ^10.0.0
 
     
