--- a/packages/flutter_rocket/pubspec.yaml
+++ b/packages/flutter_rocket/pubspec.yaml
@@ -19,7 +19,10 @@ dependencies:
   rocket_view: ^0.0.2
   rocket_mini_view: ^0.0.1
   rocket_client:
-      path: ../rocket_client
+      git:
+        url: https://github.com/JahezAcademy/flutter_rocket.git
+        path: packages/rocket_client/
+        ref: 90-support-retry-on-rocketclient
   rocket_singleton: ^0.0.1
   
 
