--- a/packages/flutter_rocket/pubspec.yaml
+++ b/packages/flutter_rocket/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_rocket
 description: Powerful package for state management & request.
-version: 0.0.4
+version: 0.0.5
 repository: https://github.com/JahezAcademy/flutter_rocket/flutter_rocket
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/flutter_rocket
 homepage: https://github.com/JahezAcademy/flutter_rocket
@@ -18,11 +18,7 @@ dependencies:
   rocket_listenable: ^0.0.1
   rocket_view: ^0.0.2
   rocket_mini_view: ^0.0.1
-  rocket_client:
-      git:
-        url: https://github.com/JahezAcademy/flutter_rocket.git
-        path: packages/rocket_client/
-        ref: 90-support-retry-on-rocketclient
+  rocket_client: 0.0.5
   rocket_singleton: ^0.0.1
   
 
