--- a/packages/flutter_rocket/pubspec.yaml
+++ b/packages/flutter_rocket/pubspec.yaml
@@ -1,9 +1,11 @@
 name: flutter_rocket
 description: Powerful package for state management & request.
-version: 0.0.4
+version: 0.0.5
 repository: https://github.com/JahezAcademy/flutter_rocket/flutter_rocket
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/flutter_rocket
 homepage: https://github.com/JahezAcademy/flutter_rocket
+
+publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -16,7 +18,7 @@ dependencies:
   rocket_listenable: ^0.0.1
   rocket_view: ^0.0.2
   rocket_mini_view: ^0.0.1
-  rocket_client: ^0.0.2
+  rocket_client: ^0.0.4
   rocket_singleton: ^0.0.1
   
 
