--- a/packages/flutter_rocket/pubspec.yaml
+++ b/packages/flutter_rocket/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
     sdk: flutter
   rocket_model: ^0.0.2
   rocket_listenable: ^0.0.1
-  rocket_view:
-    path: ../rocket_view
+  rocket_view: ^0.0.2
   rocket_mini_view: ^0.0.2
   rocket_client: ^0.0.4
   rocket_singleton: ^0.0.3
