--- a/packages/rocket_model/pubspec.yaml
+++ b/packages/rocket_model/pubspec.yaml
@@ -4,6 +4,7 @@ version: 0.0.3
 repository: https://github.com/JahezAcademy/flutter_rocket/tree/dev/packages/rocket_model
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_model
 homepage: https://github.com/JahezAcademy/flutter_rocket
+publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -12,7 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rocket_listenable: ^0.0.1
+  rocket_listenable:
+    path: ../rocket_listenable
 
 dev_dependencies:
   flutter_test:
