--- a/packages/rocket_client/pubspec.yaml
+++ b/packages/rocket_client/pubspec.yaml
@@ -4,6 +4,7 @@ version: 0.0.5
 repository: https://github.com/JahezAcademy/flutter_rocket/tree/dev/packages/rocket_client
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_client
 homepage: https://github.com/JahezAcademy/flutter_rocket
+publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -13,7 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
-  rocket_model: ^0.0.2
+  rocket_model:
+    path: ../rocket_model
+  rocket_cache:
+    path: ../rocket_cache
 
 dev_dependencies:
   flutter_test:
