--- a/packages/rocket_view/pubspec.yaml
+++ b/packages/rocket_view/pubspec.yaml
@@ -1,9 +1,10 @@
 name: rocket_view
 description: Package View widget based on RocketModel.
-version: 0.0.3
+version: 0.0.4
 repository: https://github.com/JahezAcademy/flutter_rocket/tree/dev/packages/rocket_view
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_view
 homepage: https://github.com/JahezAcademy/flutter_rocket
+publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -12,8 +13,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rocket_model: ^0.0.1
-  rocket_listenable: ^0.0.1
+  rocket_model:
+    path: ../rocket_model
+  rocket_listenable:
+    path: ../rocket_listenable
 
 dev_dependencies:
   flutter_test:
