--- a/packages/rocket_mini_view/pubspec.yaml
+++ b/packages/rocket_mini_view/pubspec.yaml
@@ -1,10 +1,9 @@
 name: rocket_mini_view
 description: Mini view for RocketValue.
-version: 0.0.2
+version: 0.0.3
 repository: https://github.com/JahezAcademy/flutter_rocket/tree/dev/packages/rocket_mini_view
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_mini_view
 homepage: https://github.com/JahezAcademy/flutter_rocket
-publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -13,8 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rocket_listenable:
-    path: ../rocket_listenable
+  rocket_listenable: ^0.0.2
 
 dev_dependencies:
   flutter_test:
