--- a/packages/rocket_view/pubspec.yaml
+++ b/packages/rocket_view/pubspec.yaml
@@ -4,7 +4,6 @@ version: 0.0.4
 repository: https://github.com/JahezAcademy/flutter_rocket/tree/dev/packages/rocket_view
 issue_tracker: https://github.com/JahezAcademy/flutter_rocket/labels/rocket_view
 homepage: https://github.com/JahezAcademy/flutter_rocket
-publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -13,10 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rocket_model:
-    path: ../rocket_model
-  rocket_listenable:
-    path: ../rocket_listenable
+  rocket_model: ^0.0.4
+  rocket_listenable: ^0.0.2
 
 dev_dependencies:
   flutter_test:
